--- a/Wuzzuf.ipynb
+++ b/Wuzzuf.ipynb
@@ -2,46 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Results per Page:  15\n",
-      "Number of results in this search:  22\n",
-      "Number of pages in this search =  2 \n",
-      " ________________________________________________________________________________ \n",
-      "\n",
-      " No.                           Job title                      Company name                           Location Posting date                                                                                                       Applying link\n",
-      "   1                Supply Chain Planner Sky Medical for Medical Devices -           Mohandessin, Giza, Egypt 11 hours ago              https://wuzzuf.net/jobs/p/SsE9QJk0ysQP-Supply-Chain-Planner-Sky-Medical-for-Medical-Devices-Giza-Egypt\n",
-      "   2  Senior Import Logistics Specialist                          Mamiba -        6th of October, Giza, Egypt 10 hours ago                         https://wuzzuf.net/jobs/p/v12VYot7KWAz-Senior-Import-Logistics-Specialist-Mamiba-Giza-Egypt\n",
-      "   3                    Planning Officer                           Dabur - 10th of Ramadan City, Cairo, Egypt 11 hours ago                                           https://wuzzuf.net/jobs/p/5EwJYJGYJM71-Planning-Officer-Dabur-Cairo-Egypt\n",
-      "   4         Local Purchasing Specialist                          Mamiba -        6th of October, Giza, Egypt 10 hours ago                                https://wuzzuf.net/jobs/p/cOAVKkyHCYFV-Local-Purchasing-Specialist-Mamiba-Giza-Egypt\n",
-      "   5                   Warehouse Manager             Good Seal Packaging - 10th of Ramadan City, Cairo, Egypt 11 hours ago                            https://wuzzuf.net/jobs/p/QVrqz8BrBX4C-Warehouse-Manager-Good-Seal-Packaging-Cairo-Egypt\n",
-      "   6                          Pharmacist             Axios International -                 Dokki, Giza, Egypt 15 hours ago                                    https://wuzzuf.net/jobs/p/QHjykN5dueYF-Pharmacist-Axios-International-Giza-Egypt\n",
-      "   7                           Purchaser                    Saint-Gobain -            Ain Sokhna, Suez, Egypt  8 hours ago                                            https://wuzzuf.net/jobs/p/0oZvTZjuhZPr-Purchaser-Saint-Gobain-Suez-Egypt\n",
-      "   8         Export Operation Specialist                    Confidential -                       Cairo, Egypt 11 hours ago                                      https://wuzzuf.net/jobs/p/ADF0OAoH4Ize-Export-Operation-Specialist-Cairo-Egypt\n",
-      "   9                     Logistics Sales           Grand Ocean Logistics -                       Cairo, Egypt 11 hours ago                            https://wuzzuf.net/jobs/p/DOsU6RJFStDg-Logistics-Sales-Grand-Ocean-Logistics-Cairo-Egypt\n",
-      "  10               Logistics Coordinator                           Naqla -            Nasr City, Cairo, Egypt 13 hours ago                                      https://wuzzuf.net/jobs/p/ZaSNkNrlvQm8-Logistics-Coordinator-Naqla-Cairo-Egypt\n",
-      "  11                      Vendor Manager            The Translation Gate -                Maadi, Cairo, Egypt 13 hours ago                              https://wuzzuf.net/jobs/p/rhgvkKmoIt5b-Vendor-Manager-The-Translation-Gate-Cairo-Egypt\n",
-      "  12                             Courier               DHL Express Egypt -                       Cairo, Egypt 14 hours ago                                        https://wuzzuf.net/jobs/p/FNDJr8PTqdEq-Courier-DHL-Express-Egypt-Cairo-Egypt\n",
-      "  13                Logistics Specialist                Aller Aqua Egypt -        6th of October, Giza, Egypt 15 hours ago                             https://wuzzuf.net/jobs/p/tIlBtL3jqnMB-Logistics-Specialist-Aller-Aqua-Egypt-Giza-Egypt\n",
-      "  14 Customer Support Service Specialist    Anabion Pharmaceutical Egypt -            New Cairo, Cairo, Egypt  8 hours ago https://wuzzuf.net/jobs/p/DmE2aAWt0DVo-Customer-Support-Service-Specialist-Anabion-Pharmaceutical-Egypt-Cairo-Egypt\n",
-      "  15               Senior Odoo Developer                    Confidential -            Nasr City, Cairo, Egypt  2 hours ago                                            https://wuzzuf.net/jobs/p/YBKxd6jVYNAd-Senior-Odoo-Developer-Cairo-Egypt\n",
-      "  16                   Patient Care Lead             Axios International -                        Giza, Egypt 15 hours ago                             https://wuzzuf.net/jobs/p/IyOvKOXCxJsy-Patient-Care-Lead-Axios-International-Giza-Egypt\n",
-      "  17                               Nurse        Medecins Sans Frontieres -           Mohandessin, Giza, Egypt  6 hours ago                                    https://wuzzuf.net/jobs/p/QaNhIombu0Hu-Nurse-Medecins-Sans-Frontieres-Giza-Egypt\n",
-      "  18                 Overseas Specialist           Grand Ocean Logistics -                       Cairo, Egypt 11 hours ago                        https://wuzzuf.net/jobs/p/938vWr8ugAd0-Overseas-Specialist-Grand-Ocean-Logistics-Cairo-Egypt\n",
-      "  19             Export Sales Specialist          Lansheng Paper Company -            Nasr City, Cairo, Egypt 11 hours ago                   https://wuzzuf.net/jobs/p/CJhs3Qln2vEh-Export-Sales-Specialist-Lansheng-Paper-Company-Cairo-Egypt\n",
-      "  20 Logistic Specialist ( (Agriculture)                 Boghdadya group -          Sheikh Zayed, Giza, Egypt 12 hours ago                   https://wuzzuf.net/jobs/p/9bIOMA6uH7mc-Logistic-Specialist-Agriculture-Boghdadya-group-Giza-Egypt\n",
-      "  21       Custom Clearance Section Head                    Confidential -          Sheikh Zayed, Giza, Egypt 12 hours ago                                     https://wuzzuf.net/jobs/p/2cRCKRCwLUiJ-Custom-Clearance-Section-Head-Giza-Egypt\n",
-      "  22                    Oracle Developer        Rowad Modern Engineering -            New Cairo, Cairo, Egypt 12 hours ago                        https://wuzzuf.net/jobs/p/K8cg0iXxfT8U-Oracle-Developer-Rowad-Modern-Engineering-Cairo-Egypt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install pandas openpyxl xlsxwriter --quie\n",
+    "!pip install selenium --quit\n",
     "from selenium.webdriver import Chrome\n",
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.common.keys import Keys\n",
