--- a/Wuzzuf.ipynb
+++ b/Wuzzuf.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install pandas openpyxl xlsxwriter --quie\n",
-    "!pip install selenium --quit\n",
+    "!pip install pandas openpyxl xlsxwriter --quiet\n",
+    "!pip install selenium --quiet\n",
     "from selenium.webdriver import Chrome\n",
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.common.keys import Keys\n",
